# api_testing

./: .pylintrc  AUTHORS  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  installation.md  pyproject.toml  requirements.txt  setup.py
scripts/: generic-chowner
tsdfileapi/: api.py  auth.py  db.py  defaults.py  exc.py  resumables.py  rmq.py  test_file_api.py  tokens.py  utils.py
tsdfileapi/config/: config-test.yaml  config.yaml  example-file-api-config.yaml
tsdfileapi/data/: example-ns.json  example.csv  så_søt(1).txt
tsdfileapi/data/tsd/p11/export/: blå_fil_3_(v1).txt  file2  this+is+another+file
tsdfileapi/data/tsd/p11/export/data-folder/: secret-data
